deployment-k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-redis-cache
spec:
  replicas: 4
  selector:
    matchLabels:
      app: spring-boot-redis-cache
  template:
    metadata:
      labels:
        app: spring-boot-redis-cache
    spec:
      containers:
        - name: spring-boot-redis-cache
          image: rolandojavier13/spring-boot-redis-cache:v1.0.0-shutdown
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /party/customer-profile/v1/actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /party/customer-profile/v1/actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 30
          resources:
            requests:
              memory: "512Mi"
              cpu: "256m"

---
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-redis-cache
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: spring-boot-redis-cache
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-boot-redis-cache
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /party/customer-profile/v1
            pathType: Prefix
            backend:
              service:
                name: spring-boot-redis-cache
                port:
                  number: 8080
